MDEV-4827 mysqldump --dump-slave=2 --master-data=2 doesn't record both

Recording both is useful on a replication relay.

If a =2, commented is selected, allow the alternate option to exist.

This still disables --dump-slave=1 --master-data=1 as having the
a CHANGE MASTER TO and START SLAVE on different positions would be
confusing and dangerious to the data.

Based of code from Elena Stepanova.